# COBOL-Legacy-Benchmark-Suite

./: .gitignore  CONTRIBUTING.md  README.md
documentation/: development-backlog.md  system-architecture.md
documentation/technical/: development-backlog.md  source-code-overview.md  system-architecture.md
modern_app/: README.md  pyproject.toml
modern_app/app/: __init__.py  config.py  database.py  main.py  models.py  schemas.py  security.py  services.py
modern_app/app/routers/: __init__.py  batch.py  inquiries.py  portfolios.py  positions.py  transactions.py
modern_app/tests/: test_app.py
src/batch/control/: BCHCON.cpy  BCHCTL00.cbl  CKPRST.cbl
src/cics/: PORTDFN.csd
src/cobol/: PORTADD.cbl  PORTDEL.cbl  PORTMSTR.cbl  PORTREAD.cbl  PORTTEST.cbl  PORTTRAN.cbl
src/copybook/: AUDITLOG.cpy  ERRHAND.cpy  HISTREC.cpy  POSREC.cpy  TRNREC.cpy
src/copybook/batch/: BCHCTL.cpy  CKPRST.cpy  PRCSEQ.cpy
src/copybook/common/: COMMON.cpy  PORTFLIO.cpy  PORTVAL.cpy  RETHND.cpy  RTNCODE.cpy
src/copybook/online/: DB2REQ.cpy  ERRHND.cpy  INQCOM.cpy
src/database/db2/: ERRLOG.sql  PORTPLAN.sql  RTNCODES.sql
src/database/vsam/: vsam-definitions.txt
src/db2/copy/: DBPROC.cpy  DBTBLS.cpy  SQLCA.cpy
src/db2/ddl/: POSHIST.sql
src/db2/definitions/: db2-definitions.sql
src/db2/support/: DB2CMT.cbl
src/jcl/: PORTDEF.jcl  PORTDEL.jcl  PORTTEST.jcl  RTNANA.jcl
src/jcl/batch/: RPTAUD.jcl  RPTPOS.jcl  RPTSTA.jcl
src/jcl/portfolio/: PORTADD.jcl  PORTREAD.jcl  PORTUPDT.jcl
src/maps/: INQSET.bms
templates/: error-handling.cbl  file-handling.cbl
(+35 files in other folders)
