[project]
name = "portfolio-modernization"
version = "0.1.0"
description = "Modern FastAPI implementation of the COBOL benchmark portfolio system"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "sqlmodel>=0.0.16",
  "httpx>=0.27",
  "pydantic-settings>=2.2",
  "alembic>=1.13"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23"
]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"
